# [package]
# authors = ["tttinnny"]
# edition = "2018"
# readme = "README.md"
# name = "orientation_controller"
# version = "0.1.0"

# [dependencies]
# cortex-m-rt = ">=0.6.15,<0.8"
# cortex-m = "0.7.6"
# cortex-m-semihosting = "0.5.0"
# panic-halt = "0.2.0"

# mpu9250 = "0.25.0"


# # defmt = "0.3"
# # defmt-rtt = "0.4"

# embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
# embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync", features = ["defmt"] }
# embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
# embassy-time = { version = "0.3.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

# embedded-io = { version = "0.6.1", features = ["defmt-03"]  }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }




# #Uncomment for the panic example.
# #panic-itm = "0.4.1"

# # Uncomment for the allocator example.
# # alloc-cortex-m = "0.4.0"

# # Uncomment for the device example.
# # Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# # and then use `cargo build --examples device` to build it.
# # [dependencies.stm32f3]
# # features = ["stm32f303", "rt"]
# # version = "0.7.1"

# # this lets you use `cargo fix`!
# [[bin]]
# name = "orientation_controller"
# test = false
# bench = false

# [profile.release]
# #codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# #lto = true # better optimizations














[package]
edition = "2021"
name = "orientation_controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-net = { version = "0.4.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-net-esp-hosted = { version = "0.1.0", path = "../embassy/embassy-net-esp-hosted", features = ["defmt"] }
embassy-net-enc28j60 = { version = "0.1.0", path = "../embassy/embassy-net-enc28j60", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.1"
usbd-hid = "0.6.0"
serde = { version = "1.0.136", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
num-integer = { version = "0.1.45", default-features = false }
microfft = "0.5.0"


nalgebra  = {default-features = false, version = "0.32.5", features = ["libm"]  }
libm = "0.2.8"
icm20948-async =  { version = "0.1.3", path = "../icm20948-async"} 

[profile.release]
debug = true
